--- a/style.css
+++ b/style.css
@@ -10,3 +10,22 @@ body {
   width: 100%;
   height: 100%;
 }
+
+#loader {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
+  background: #0b0b0b;
+}
+
+#main {
+  position: relative;
+  background: color #111;
+}
+
+#page1 {
+  height: 100vh;
+  width: 100%;
+  background-color: #151515;
+}
