--- a/style.css
+++ b/style.css
@@ -12,6 +12,17 @@ body {
   height: 100%;
 }
 
+#crsr {
+  height: 2vw;
+  width: 2vw;
+  border-radius: 50%;
+  border: 2px solid #8b8b8b;
+  position: fixed;
+  z-index: 9999;
+  mix-blend-mode: difference;
+  transform: translate(-50%, -50%);
+}
+
 #loader {
   height: 100%;
   width: 100%;
@@ -107,4 +118,46 @@ body {
   height: 100vh;
   width: 100%;
   background-color: #151515;
+}
+
+#page1 #nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 2.3vw 5.5vw;
+}
+
+#nav-part2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3vw;
+}
+
+#nav-part2 h4 {
+  font-size: 0.8 vw;
+  font-weight: 500;
+}
+
+.hero {
+  /* background-color: red; */
+  width: 73%;
+  margin-left: 27%;
+}
+
+.hero:nth-child(2) {
+  margin-top: 19vh;
+}
+.hero h1 {
+  height: fit-content;
+  font-size: 7.2vw;
+  line-height: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
 }
