--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   border-radius: 50%;
   border: 2px solid #8b8b8b;
   position: fixed;
-  z-index: 9999;
+  z-index: 999;
   mix-blend-mode: difference;
   transform: translate(-50%, -50%);
 }
@@ -149,15 +149,35 @@ body {
   /* background-color: red; */
   width: 73%;
   margin-left: 27%;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 999;
 }
 
 .hero:nth-child(2) {
-  margin-top: 19vh;
+  margin-top: 18vh;
 }
+
 .hero h1 {
-  height: fit-content;
   font-size: 7.2vw;
   line-height: 7.2vw;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+.hero h2,
+.hero h3 {
+  font-size: 7.2vw;
+  line-height: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.hero h2:hover {
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
+  font-weight: 500;
+  border-bottom: 0.5vw solid #ffffff00;
 }
