--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@
 
 html,
 body {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 #crsr {
   height: 2vw;
   width: 2vw;
   border-radius: 50%;
-  border: 2px solid #8b8b8b;
+  /* background-color: white; */
+  border: 1px solid #ffffffbe;
   position: fixed;
   z-index: 999;
   mix-blend-mode: difference;
@@ -28,7 +29,7 @@ body {
   width: 100%;
   position: fixed;
   z-index: 999;
-  background: #0b0b0b;
+  background-color: #030303;
   padding: 25vh 10vw;
 }
 
@@ -57,6 +58,7 @@ body {
 }
 
 #line1-part1 h5 {
+  /* background-color: red; */
   width: 5vw;
   text-align: right;
 }
@@ -75,6 +77,7 @@ body {
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
+
 @keyframes loaderAnime {
   0% {
     font-family: "plain light";
@@ -111,7 +114,7 @@ body {
 
 #main {
   position: relative;
-  background: color #111;
+  background-color: #030303;
 }
 
 #page1 {
@@ -121,14 +124,8 @@ body {
 }
 
 #page1 #nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 2.3vw 5.5vw;
 }
@@ -141,19 +138,21 @@ body {
 }
 
 #nav-part2 h4 {
-  font-size: 0.8 vw;
+  font-size: 0.8vw;
   font-weight: 500;
 }
 
 .hero {
   /* background-color: red; */
-  width: 73%;
+  width: 72%;
   margin-left: 27%;
   height: fit-content;
+  /* background-color: red; */
+  overflow: hidden;
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 999;
+  z-index: 99999;
 }
 
 .hero:nth-child(2) {
@@ -162,22 +161,20 @@ body {
 
 .hero h1 {
   font-size: 7.2vw;
-  line-height: 7.2vw;
   font-weight: 600;
   text-transform: uppercase;
+  line-height: 7.2vw;
 }
 
 .hero h2,
 .hero h3 {
   font-size: 7.2vw;
-  line-height: 7.2vw;
   font-weight: 600;
   text-transform: uppercase;
+  line-height: 7.2vw;
 }
-
 .hero h2:hover {
   -webkit-text-stroke: 2px #fff;
   color: transparent;
   font-weight: 500;
-  border-bottom: 0.5vw solid #ffffff00;
 }
