--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ body {
   height: 100vh;
   width: 100%;
   background-color: #151515;
+  margin-bottom: 2vh;
 }
 
 #page1 #nav {
@@ -192,7 +193,7 @@ body {
   padding-bottom: 0.8vw;
   transition: all ease 0.3s;
 }
-.hero h2:hover {
+.hero h1:hover {
   -webkit-text-stroke: 2px #fff;
   color: transparent;
   font-weight: 500;
@@ -619,4 +620,18 @@ body {
 ._canvas_container {
   z-index: 999999 !important;
   pointer-events: none;
+}
+
+#flag {
+  height: 25vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+}
+
+#hero3 {
+  z-index: 999;
+  position: relative;
 }
